CodeJB/log/err2.txt
Info in <TUnixSystem::ACLiC>: creating shared library /home/smjoblan/iTHEPHY/iTHEPHY/CodeJB/./eff_cc.so
Warning in cling::IncrementalParser::CheckABICompatibility():
  Possible C++ standard library mismatch, compiled with __GLIBCXX__ '20181206'
  Extraction of runtime standard library version was: '20191114'
In file included from input_line_12:9:
././eff.cc:581:3: error: use of undeclared identifier 'saving'
  saving = "output/"+directory+"/weights/h_dist_x.pdf";
  ^
././eff.cc:581:22: error: use of undeclared identifier 'directory'
  saving = "output/"+directory+"/weights/h_dist_x.pdf";
                     ^
././eff.cc:582:17: error: use of undeclared identifier 'saving'
  c_test->Print(saving.c_str());
                ^
././eff.cc:586:3: error: use of undeclared identifier 'saving'
  saving = "output/"+directory+"/weights/h_dist_y.pdf";
  ^
././eff.cc:586:22: error: use of undeclared identifier 'directory'
  saving = "output/"+directory+"/weights/h_dist_y.pdf";
                     ^
././eff.cc:587:17: error: use of undeclared identifier 'saving'
  c_test->Print(saving.c_str());
                ^
././eff.cc:591:3: error: use of undeclared identifier 'saving'
  saving = "output/"+directory+"/weights/h_dist_z.pdf";
  ^
././eff.cc:591:22: error: use of undeclared identifier 'directory'
  saving = "output/"+directory+"/weights/h_dist_z.pdf";
                     ^
././eff.cc:592:17: error: use of undeclared identifier 'saving'
  c_test->Print(saving.c_str());
                ^
Error in <ACLiC>: Dictionary generation failed!
